--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV = development
 PORT = 4000
-MONGO_URI = mongodb+srv://Yang:wzNgPZ4EqrruMfa8@cluster0.ncyr4ad.mongodb.net/mp3?retryWrites=true&w=majority
+# MONGO_URI = mongodb+srv://Yang:wzNgPZ4EqrruMfa8@cluster0.ncyr4ad.mongodb.net/mp3?retryWrites=true&w=majority
